# Taller-3-Robotica-V2-main

ros2_ws/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/ros2_ws/install/diff_bot_3/lib/diff_bot_3/: robot_core  robot_interface  robot_player  robot_teleop
ros2_ws/ros2_ws/install/diff_bot_3/share/diff_bot_3/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/ros2_ws/install/diff_bot_3/share/diff_bot_3/launch/: robot_launch.py
ros2_ws/ros2_ws/log/: latest_build
ros2_ws/ros2_ws/src/diff_bot_3/: package.xml  setup.cfg  setup.py
ros2_ws/ros2_ws/src/diff_bot_3/diff_bot_3/: cmd_vel_mux.py  esp32_bridge.py  forklift_manager.py  robot_core.py  robot_interface.py  robot_player.py  robot_teleop.py  vision_node.py
ros2_ws/ros2_ws/src/diff_bot_3/firmware_esp32/: esp32_slave.ino
ros2_ws/ros2_ws/src/diff_bot_3/firmware_esp32/esp32_lift/: esp32_lift.ino
ros2_ws/ros2_ws/src/diff_bot_3/firmware_esp32/esp32_motors/: esp32_motors.ino
ros2_ws/ros2_ws/src/diff_bot_3/launch/: robot_launch.py
